--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,21 +7,21 @@
     <string name="ac">AC</string>
     <string name="brackets">()</string>
     <string name="mod">%</string>
-    <string name="divide">/</string>
+    <string name="divide">÷</string>
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
-    <string name="x">x</string>
+    <string name="x">×</string>
     <string name="_4">4</string>
     <string name="_5">5</string>
     <string name="_6">6</string>
-    <string name="minus">-</string>
+    <string name="minus">&#0045;</string>
     <string name="_1">1</string>
     <string name="_2">2</string>
     <string name="_3">3</string>
     <string name="add">+</string>
     <string name="_0">0</string>
     <string name="dot">.</string>
-    <string name="del">DEL</string>
+    <string name="del">\u232b</string>
     <string name="enter">=</string>
 </resources>
