--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CalculatorApp</string>
+    <string name="app_name">Calculator</string>
     <string name="sqrt">√</string>
     <string name="pi">π</string>
     <string name="fac">!</string>
